# smol-course

./: .gitignore  pyproject.toml
1_instruction_tuning/scripts/: chat_templates_example.py  sft_finetuning_example.py
1_instruction_tuning/scritps/: sft_finetuning_example.py
2_preference_alignment/scripts/: dpo_finetuning_example.py  orpo_finetuning_example.py
3_parameter_efficient_finetuning/scripts/: finetune_sft_peft.py
4_evaluation/scripts/: lighteval_evaluate_and_analyse_your_LLM.py
