[project]
name = "smol-course"
version = "0.1.0"
description = "a smol course on llms"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=1.2.0",
  "bitsandbytes>=0.45.0 ; sys_platform == 'linux'",
  "datasets>=3.1.0",
  "huggingface-hub>=0.26.3",
  "ipykernel>=6.29.5",
  "loralib>=0.1.2",
  "peft>=0.14.0",
  "python-dotenv>=1.0.1",
  "transformers>=4.46.3",
  "trl>=0.12.1",
  "wandb>=0.19.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
extend-include = ["*.ipynb"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
typeCheckingMode = "basic"
